--- a/Tugas.html
+++ b/Tugas.html
@@ -439,11 +439,7 @@ adalah tahapan pemahaman yang mendalam tentang data yang akan dianalisis, sehing
 
 <span class="c1"># koneksi ke mysql</span>
 <span class="n">conn</span> <span class="o">=</span> <span class="n">mysql</span><span class="o">.</span><span class="n">connector</span><span class="o">.</span><span class="n">connect</span><span class="p">(</span>
-    <span class="n">host</span> <span class="o">=</span> <span class="s1">&#39;mohammadilhamyusronrisqi088-mohammadilhamyusronrisqi088.a.aivencloud.com&#39;</span><span class="p">,</span>
-    <span class="n">port</span> <span class="o">=</span> <span class="mi">14305</span><span class="p">,</span>
-    <span class="n">user</span> <span class="o">=</span> <span class="s1">&#39;avnadmin&#39;</span><span class="p">,</span>
-    <span class="n">password</span> <span class="o">=</span> <span class="s1">&#39;AVNS_WWfj_XdD5SWZ92zK8vz&#39;</span><span class="p">,</span>
-    <span class="n">database</span> <span class="o">=</span> <span class="s1">&#39;defaultdb&#39;</span>
+    <p>disini saya sembunyikan koneksi</p>
 <span class="p">)</span>
 
 <span class="c1"># kode sql untuk membaca data dengan panda</span>
