rillcuy terakhir ini

--- a/Tugas.html
+++ b/Tugas.html
@@ -2476,16 +2476,16 @@ yang dihitung adalah</p>
 <li><p>standar deviasi</p></li>
 <li><p>distribusi Gaussian untuk rumusnya yaitu :
 <span class="math notranslate nohighlight">\(P(A|H)=\frac{1}{\sqrt{2\pi \sigma _{y}^{2}}}exp(-\frac{(x_{i}-\mu _{y})^{2}}{2\sigma _{y}^{2}})\)</span>
-<img alt="alt text" src="work/untitled/gaussian.png" />
+<img alt="alt text" src="_images/gaussian.png" />
 kemudian jika didapatkan seluruhnya maka cari probabilitas dari setiap data, untuk rumusnya yaitu :
 <span class="math notranslate nohighlight">\(p(a)=\frac{n(a))}{N}\)</span>
 P(a) : probabilitas
 n(a) : banyaknya record data train pada suatu kelas
 N : total banyaknya record data train
-<img alt="alt text" src="work/untitled/probabilitas.png" />
+<img alt="alt text" src="_images/probabilitas.png" />
 kemudian jika nilai probabilitas dan gaussian sudah ditemukan maka dilanjutkan dengan menghitung posteriori untuk rumusnya yaitu :
 <span class="math notranslate nohighlight">\( posteriori=P(a)\ast P(A|Hi)\)</span>
-<img alt="alt text" src="work/untitled/posteriori.png" />
+<img alt="alt text" src="_images/posteriori.png" />
 kemudian dari posteriori tersebut cari nilai terbesarnya, pada tabel tersebut nilai terbeasr terdapat pada fitur versicolor</p></li>
 </ol>
 <a style='text-decoration:none;line-height:16px;display:flex;color:#5B5B62;padding:10px;justify-content:end;' href='https://deepnote.com?utm_source=created-in-deepnote-cell&projectId=93c1ba3c-3b6e-4b74-9706-ba3a58b65196' target="_blank">
