--- a/Tugas.html
+++ b/Tugas.html
@@ -2477,7 +2477,7 @@ yang dihitung adalah</p>
 <li><p>distribusi Gaussian untuk rumusnya yaitu :
 <span class="math notranslate nohighlight">\(P(A|H)=\frac{1}{\sqrt{2\pi \sigma _{y}^{2}}}exp(-\frac{(x_{i}-\mu _{y})^{2}}{2\sigma _{y}^{2}})\)</span>
 <img alt="alt text" src="_images/gaussian.png" />
-kemudian jika didapatkan seluruhnya maka cari probabilitas dari setiap data, untuk rumusnya yaitu :
+kemudian jika didapatkan seluruhnya maka carii probabilitas dari setiap data, untuk rumusnya yaitu :
 <span class="math notranslate nohighlight">\(p(a)=\frac{n(a))}{N}\)</span>
 P(a) : probabilitas
 n(a) : banyaknya record data train pada suatu kelas
