--- a/Tugas.html
+++ b/Tugas.html
@@ -449,10 +449,10 @@ adalah tahapan pemahaman yang mendalam tentang data yang akan dianalisis, sehing
 
 <span class="c1"># koneksi ke mysql</span>
 <span class="n">conn</span> <span class="o">=</span> <span class="n">mysql</span><span class="o">.</span><span class="n">connector</span><span class="o">.</span><span class="n">connect</span><span class="p">(</span>
-    <span class="n">host</span> <span class="o">=</span> <span class="s1">&#39;mohammadilhamyusronrisqi088-mohammadilhamyusronrisqi088.a.aivencloud.com&#39;</span><span class="p">,</span>
+    <span class="n">host</span> <span class="o">=</span> <span class="s1">&#39;Rahasia bang&#39;</span><span class="p">,</span>
     <span class="n">port</span> <span class="o">=</span> <span class="mi">14305</span><span class="p">,</span>
     <span class="n">user</span> <span class="o">=</span> <span class="s1">&#39;avnadmin&#39;</span><span class="p">,</span>
-    <span class="n">password</span> <span class="o">=</span> <span class="s1">&#39;AVNS_WWfj_XdD5SWZ92zK8vz&#39;</span><span class="p">,</span>
+    <span class="n">password</span> <span class="o">=</span> <span class="s1">&#39;ini rahasia&#39;</span><span class="p">,</span>
     <span class="n">database</span> <span class="o">=</span> <span class="s1">&#39;defaultdb&#39;</span>
 <span class="p">)</span>
 
@@ -473,7 +473,7 @@ adalah tahapan pemahaman yang mendalam tentang data yang akan dianalisis, sehing
 <span class="ne">----&gt; </span><span class="mi">2</span> <span class="kn">import</span> <span class="nn">pandas</span> <span class="k">as</span> <span class="nn">pd</span>
 <span class="g g-Whitespace">      </span><span class="mi">4</span> <span class="c1"># koneksi ke mysql</span>
 <span class="g g-Whitespace">      </span><span class="mi">5</span> <span class="n">conn</span> <span class="o">=</span> <span class="n">mysql</span><span class="o">.</span><span class="n">connector</span><span class="o">.</span><span class="n">connect</span><span class="p">(</span>
-<span class="g g-Whitespace">      </span><span class="mi">6</span>     <span class="n">host</span> <span class="o">=</span> <span class="s1">&#39;mohammadilhamyusronrisqi088-mohammadilhamyusronrisqi088.a.aivencloud.com&#39;</span><span class="p">,</span>
+<span class="g g-Whitespace">      </span><span class="mi">6</span>     <span class="n">host</span> <span class="o">=</span> <span class="s1">&#39;Rahasia bang&#39;</span><span class="p">,</span>
 <span class="g g-Whitespace">      </span><span class="mi">7</span>     <span class="n">port</span> <span class="o">=</span> <span class="mi">14305</span><span class="p">,</span>
    <span class="p">(</span><span class="o">...</span><span class="p">)</span>
 <span class="g g-Whitespace">     </span><span class="mi">10</span>     <span class="n">database</span> <span class="o">=</span> <span class="s1">&#39;defaultdb&#39;</span>
@@ -1662,10 +1662,10 @@ kemudian saya akan melakukan pengujian dengan sql</p></li>
 
 <span class="c1"># Koneksi ke database MySQL</span>
 <span class="n">connection</span> <span class="o">=</span> <span class="n">mysql</span><span class="o">.</span><span class="n">connector</span><span class="o">.</span><span class="n">connect</span><span class="p">(</span>
-    <span class="n">host</span><span class="o">=</span><span class="s1">&#39;mohammadilhamyusronrisqi088-mohammadilhamyusronrisqi088.a.aivencloud.com&#39;</span><span class="p">,</span>
+    <span class="n">host</span><span class="o">=</span><span class="s1">&#39;Rahasia bang&#39;</span><span class="p">,</span>
     <span class="n">port</span><span class="o">=</span><span class="mi">14305</span><span class="p">,</span>
     <span class="n">user</span><span class="o">=</span><span class="s1">&#39;avnadmin&#39;</span><span class="p">,</span>
-    <span class="n">password</span><span class="o">=</span><span class="s1">&#39;AVNS_WWfj_XdD5SWZ92zK8vz&#39;</span><span class="p">,</span>
+    <span class="n">password</span><span class="o">=</span><span class="s1">&#39;ini rahasia&#39;</span><span class="p">,</span>
     <span class="n">database</span><span class="o">=</span><span class="s1">&#39;defaultdb&#39;</span>
 <span class="p">)</span>
 
@@ -1748,10 +1748,10 @@ Model accuracy: 96.55%
 
 <span class="c1"># Koneksi ke database MySQL</span>
 <span class="n">conn</span> <span class="o">=</span> <span class="n">mysql</span><span class="o">.</span><span class="n">connector</span><span class="o">.</span><span class="n">connect</span><span class="p">(</span>
-    <span class="n">host</span><span class="o">=</span><span class="s1">&#39;mohammadilhamyusronrisqi088-mohammadilhamyusronrisqi088.a.aivencloud.com&#39;</span><span class="p">,</span>
+    <span class="n">host</span><span class="o">=</span><span class="s1">&#39;Rahasia bang&#39;</span><span class="p">,</span>
     <span class="n">port</span><span class="o">=</span><span class="mi">14305</span><span class="p">,</span>
     <span class="n">user</span><span class="o">=</span><span class="s1">&#39;avnadmin&#39;</span><span class="p">,</span>
-    <span class="n">password</span><span class="o">=</span><span class="s1">&#39;AVNS_WWfj_XdD5SWZ92zK8vz&#39;</span><span class="p">,</span>
+    <span class="n">password</span><span class="o">=</span><span class="s1">&#39;ini rahasia&#39;</span><span class="p">,</span>
     <span class="n">database</span><span class="o">=</span><span class="s1">&#39;defaultdb&#39;</span>
 <span class="p">)</span>
 
@@ -1805,10 +1805,10 @@ Model accuracy: 96.55%
 
 <span class="c1"># Membuka kembali koneksi ke database MySQL</span>
 <span class="n">conn</span> <span class="o">=</span> <span class="n">mysql</span><span class="o">.</span><span class="n">connector</span><span class="o">.</span><span class="n">connect</span><span class="p">(</span>
-    <span class="n">host</span><span class="o">=</span><span class="s1">&#39;mohammadilhamyusronrisqi088-mohammadilhamyusronrisqi088.a.aivencloud.com&#39;</span><span class="p">,</span>
+    <span class="n">host</span><span class="o">=</span><span class="s1">&#39;Rahasia bang&#39;</span><span class="p">,</span>
     <span class="n">port</span><span class="o">=</span><span class="mi">14305</span><span class="p">,</span>
     <span class="n">user</span><span class="o">=</span><span class="s1">&#39;avnadmin&#39;</span><span class="p">,</span>
-    <span class="n">password</span><span class="o">=</span><span class="s1">&#39;AVNS_WWfj_XdD5SWZ92zK8vz&#39;</span><span class="p">,</span>
+    <span class="n">password</span><span class="o">=</span><span class="s1">&#39;ini rahasia&#39;</span><span class="p">,</span>
     <span class="n">database</span><span class="o">=</span><span class="s1">&#39;defaultdb&#39;</span>
 <span class="p">)</span>
 
@@ -2063,19 +2063,19 @@ koneksikan terlebih dahulu ke masing masing sql, kemudian disatukan</p>
 
 <span class="c1"># Koneksi ke MySQL</span>
 <span class="n">mysql_connection</span> <span class="o">=</span> <span class="n">mysql</span><span class="o">.</span><span class="n">connector</span><span class="o">.</span><span class="n">connect</span><span class="p">(</span>
-    <span class="n">host</span><span class="o">=</span><span class="s1">&#39;mohammadilhamyusronrisqi088-mohammadilhamyusronrisqi088.a.aivencloud.com&#39;</span><span class="p">,</span>
+    <span class="n">host</span><span class="o">=</span><span class="s1">&#39;Rahasia bang&#39;</span><span class="p">,</span>
     <span class="n">port</span><span class="o">=</span><span class="mi">14305</span><span class="p">,</span>
     <span class="n">user</span><span class="o">=</span><span class="s1">&#39;avnadmin&#39;</span><span class="p">,</span>
-    <span class="n">password</span><span class="o">=</span><span class="s1">&#39;AVNS_WWfj_XdD5SWZ92zK8vz&#39;</span><span class="p">,</span>
+    <span class="n">password</span><span class="o">=</span><span class="s1">&#39;ini rahasia&#39;</span><span class="p">,</span>
     <span class="n">database</span><span class="o">=</span><span class="s1">&#39;defaultdb&#39;</span>
 <span class="p">)</span>
 
 <span class="c1"># Koneksi ke PostgreSQL</span>
 <span class="n">pg_connection</span> <span class="o">=</span> <span class="n">psycopg2</span><span class="o">.</span><span class="n">connect</span><span class="p">(</span>
-    <span class="n">host</span><span class="o">=</span><span class="s1">&#39;yusron-mohammadilhamyusronrisqi088.a.aivencloud.com&#39;</span><span class="p">,</span>
+    <span class="n">host</span><span class="o">=</span><span class="s1">&#39;rahasia&#39;</span><span class="p">,</span>
     <span class="n">port</span><span class="o">=</span><span class="mi">14305</span><span class="p">,</span>
     <span class="n">user</span><span class="o">=</span><span class="s1">&#39;avnadmin&#39;</span><span class="p">,</span>
-    <span class="n">password</span><span class="o">=</span><span class="s1">&#39;AVNS_kSS72VZFoaxQgDRgkMp&#39;</span><span class="p">,</span>
+    <span class="n">password</span><span class="o">=</span><span class="s1">&#39;AVNS_kSS72VZFoaxQgDRgkMp&#39;</span><span clraass="p">,</span>
     <span class="n">database</span><span class="o">=</span><span class="s1">&#39;defaultdb&#39;</span>
 <span class="p">)</span>
 
@@ -2259,10 +2259,10 @@ LOF scores:
 
 <span class="c1"># Koneksi ke database MySQL</span>
 <span class="n">connection</span> <span class="o">=</span> <span class="n">mysql</span><span class="o">.</span><span class="n">connector</span><span class="o">.</span><span class="n">connect</span><span class="p">(</span>
-    <span class="n">host</span><span class="o">=</span><span class="s1">&#39;mohammadilhamyusronrisqi088-mohammadilhamyusronrisqi088.a.aivencloud.com&#39;</span><span class="p">,</span>
+    <span class="n">host</span><span class="o">=</span><span class="s1">&#39;Rahasia bang&#39;</span><span class="p">,</span>
     <span class="n">port</span><span class="o">=</span><span class="mi">14305</span><span class="p">,</span>
     <span class="n">user</span><span class="o">=</span><span class="s1">&#39;avnadmin&#39;</span><span class="p">,</span>
-    <span class="n">password</span><span class="o">=</span><span class="s1">&#39;AVNS_WWfj_XdD5SWZ92zK8vz&#39;</span><span class="p">,</span>
+    <span class="n">password</span><span class="o">=</span><span class="s1">&#39;ini rahasia&#39;</span><span class="p">,</span>
     <span class="n">database</span><span class="o">=</span><span class="s1">&#39;defaultdb&#39;</span>
 <span class="p">)</span>
 
@@ -2338,10 +2338,10 @@ LOF scores:
 
 <span class="c1"># koneksi ke database MySQL</span>
 <span class="n">sql_connection</span> <span class="o">=</span> <span class="n">mysql</span><span class="o">.</span><span class="n">connector</span><span class="o">.</span><span class="n">connect</span><span class="p">(</span>
-    <span class="n">host</span><span class="o">=</span><span class="s1">&#39;mohammadilhamyusronrisqi088-mohammadilhamyusronrisqi088.a.aivencloud.com&#39;</span><span class="p">,</span>
+    <span class="n">host</span><span class="o">=</span><span class="s1">&#39;Rahasia bang&#39;</span><span class="p">,</span>
     <span class="n">port</span><span class="o">=</span><span class="mi">14305</span><span class="p">,</span>
     <span class="n">user</span><span class="o">=</span><span class="s1">&#39;avnadmin&#39;</span><span class="p">,</span>
-    <span class="n">password</span><span class="o">=</span><span class="s1">&#39;AVNS_WWfj_XdD5SWZ92zK8vz&#39;</span><span class="p">,</span>
+    <span class="n">password</span><span class="o">=</span><span class="s1">&#39;ini rahasia&#39;</span><span class="p">,</span>
     <span class="n">database</span><span class="o">=</span><span class="s1">&#39;defaultdb&#39;</span>
 <span class="p">)</span>
 
