--- a/Tugas.html
+++ b/Tugas.html
@@ -453,7 +453,7 @@ adalah tahapan pemahaman yang mendalam tentang data yang akan dianalisis, sehing
     <span class="n">port</span> <span class="o">=</span> <span class="mi">mwehehe</span><span class="p">,</span>
     <span class="n">user</span> <span class="o">=</span> <span class="s1">&#39;avnadmin&#39;</span><span class="p">,</span>
     <span class="n">password</span> <span class="o">=</span> <span class="s1">&#39;ini rahasia&#39;</span><span class="p">,</span>
-    <span class="n">database</span> <span class="o">=</span> <span class="s1">&#39;defaultdb&#39;</span>
+    <span class="n">database</span> <span class="o">=</span> <span class="s1">&#39;rahasia gann&#39;</span>
 <span class="p">)</span>
 
 <span class="c1"># kode sql untuk membaca data dengan panda</span>
@@ -476,7 +476,7 @@ adalah tahapan pemahaman yang mendalam tentang data yang akan dianalisis, sehing
 <span class="g g-Whitespace">      </span><span class="mi">6</span>     <span class="n">host</span> <span class="o">=</span> <span class="s1">&#39;Rahasia bang&#39;</span><span class="p">,</span>
 <span class="g g-Whitespace">      </span><span class="mi">7</span>     <span class="n">port</span> <span class="o">=</span> <span class="mi">mwehehe</span><span class="p">,</span>
    <span class="p">(</span><span class="o">...</span><span class="p">)</span>
-<span class="g g-Whitespace">     </span><span class="mi">10</span>     <span class="n">database</span> <span class="o">=</span> <span class="s1">&#39;defaultdb&#39;</span>
+<span class="g g-Whitespace">     </span><span class="mi">10</span>     <span class="n">database</span> <span class="o">=</span> <span class="s1">&#39;rahasia gann&#39;</span>
 <span class="g g-Whitespace">     </span><span class="mi">11</span> <span class="p">)</span>
 
 <span class="ne">ModuleNotFoundError</span>: No module named &#39;pandas&#39;
@@ -1666,7 +1666,7 @@ kemudian saya akan melakukan pengujian dengan sql</p></li>
     <span class="n">port</span><span class="o">=</span><span class="mi">mwehehe</span><span class="p">,</span>
     <span class="n">user</span><span class="o">=</span><span class="s1">&#39;avnadmin&#39;</span><span class="p">,</span>
     <span class="n">password</span><span class="o">=</span><span class="s1">&#39;ini rahasia&#39;</span><span class="p">,</span>
-    <span class="n">database</span><span class="o">=</span><span class="s1">&#39;defaultdb&#39;</span>
+    <span class="n">database</span><span class="o">=</span><span class="s1">&#39;rahasia gann&#39;</span>
 <span class="p">)</span>
 
 <span class="c1"># Baca data dari database</span>
@@ -1752,7 +1752,7 @@ Model accuracy: 96.55%
     <span class="n">port</span><span class="o">=</span><span class="mi">mwehehe</span><span class="p">,</span>
     <span class="n">user</span><span class="o">=</span><span class="s1">&#39;avnadmin&#39;</span><span class="p">,</span>
     <span class="n">password</span><span class="o">=</span><span class="s1">&#39;ini rahasia&#39;</span><span class="p">,</span>
-    <span class="n">database</span><span class="o">=</span><span class="s1">&#39;defaultdb&#39;</span>
+    <span class="n">database</span><span class="o">=</span><span class="s1">&#39;rahasia gann&#39;</span>
 <span class="p">)</span>
 
 <span class="c1"># Baca data dari database</span>
@@ -1809,7 +1809,7 @@ Model accuracy: 96.55%
     <span class="n">port</span><span class="o">=</span><span class="mi">mwehehe</span><span class="p">,</span>
     <span class="n">user</span><span class="o">=</span><span class="s1">&#39;avnadmin&#39;</span><span class="p">,</span>
     <span class="n">password</span><span class="o">=</span><span class="s1">&#39;ini rahasia&#39;</span><span class="p">,</span>
-    <span class="n">database</span><span class="o">=</span><span class="s1">&#39;defaultdb&#39;</span>
+    <span class="n">database</span><span class="o">=</span><span class="s1">&#39;rahasia gann&#39;</span>
 <span class="p">)</span>
 
 <span class="c1"># Mengubah data di database MySQL</span>
@@ -2067,7 +2067,7 @@ koneksikan terlebih dahulu ke masing masing sql, kemudian disatukan</p>
     <span class="n">port</span><span class="o">=</span><span class="mi">mwehehe</span><span class="p">,</span>
     <span class="n">user</span><span class="o">=</span><span class="s1">&#39;avnadmin&#39;</span><span class="p">,</span>
     <span class="n">password</span><span class="o">=</span><span class="s1">&#39;ini rahasia&#39;</span><span class="p">,</span>
-    <span class="n">database</span><span class="o">=</span><span class="s1">&#39;defaultdb&#39;</span>
+    <span class="n">database</span><span class="o">=</span><span class="s1">&#39;rahasia gann&#39;</span>
 <span class="p">)</span>
 
 <span class="c1"># Koneksi ke PostgreSQL</span>
@@ -2076,7 +2076,7 @@ koneksikan terlebih dahulu ke masing masing sql, kemudian disatukan</p>
     <span class="n">port</span><span class="o">=</span><span class="mi">mwehehe</span><span class="p">,</span>
     <span class="n">user</span><span class="o">=</span><span class="s1">&#39;avnadmin&#39;</span><span class="p">,</span>
     <span class="n">password</span><span class="o">=</span><span class="s1">&#39;AVNS_kSS72VZFoaxQgDRgkMp&#39;</span><span clraass="p">,</span>
-    <span class="n">database</span><span class="o">=</span><span class="s1">&#39;defaultdb&#39;</span>
+    <span class="n">database</span><span class="o">=</span><span class="s1">&#39;rahasia gann&#39;</span>
 <span class="p">)</span>
 
 <span class="c1"># Query untuk MySQL</span>
@@ -2263,7 +2263,7 @@ LOF scores:
     <span class="n">port</span><span class="o">=</span><span class="mi">mwehehe</span><span class="p">,</span>
     <span class="n">user</span><span class="o">=</span><span class="s1">&#39;avnadmin&#39;</span><span class="p">,</span>
     <span class="n">password</span><span class="o">=</span><span class="s1">&#39;ini rahasia&#39;</span><span class="p">,</span>
-    <span class="n">database</span><span class="o">=</span><span class="s1">&#39;defaultdb&#39;</span>
+    <span class="n">database</span><span class="o">=</span><span class="s1">&#39;rahasia gann&#39;</span>
 <span class="p">)</span>
 
 <span class="k">if</span> <span class="n">connection</span><span class="p">:</span>
@@ -2342,7 +2342,7 @@ LOF scores:
     <span class="n">port</span><span class="o">=</span><span class="mi">mwehehe</span><span class="p">,</span>
     <span class="n">user</span><span class="o">=</span><span class="s1">&#39;avnadmin&#39;</span><span class="p">,</span>
     <span class="n">password</span><span class="o">=</span><span class="s1">&#39;ini rahasia&#39;</span><span class="p">,</span>
-    <span class="n">database</span><span class="o">=</span><span class="s1">&#39;defaultdb&#39;</span>
+    <span class="n">database</span><span class="o">=</span><span class="s1">&#39;rahasia gann&#39;</span>
 <span class="p">)</span>
 
 <span class="c1"># Membaca data dari database menggunakan Pandas</span>
